--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
       <a href="/">Accueil</a>
       <a href="/map">À propos de moi</a>
       <a href="/repertoire">Répertoire d'images</a>
+      <a href="/clusters">Kmeans</a>
     </nav>
 
     <div class="content">
